--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/ioredis": "^5.0.0",
+    "bullmq": "^5.7.15",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ioredis": "^5.4.1",
     "nodemon": "^3.1.3"
   }
 }
