--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@bull-board/express": "^5.20.1",
     "@types/express": "^4.17.21",
     "@types/ioredis": "^5.0.0",
     "bullmq": "^5.7.15",
