--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "zod": "^3.23.8"
   }
 }
